添加url-loader,file-loader，html-withimg-loader做图片处理。修改打包后静态资源路径

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,5 +1,13 @@
 body {
+  text-align: center;
+  overflow: hidden;
   div {
-    border: 1px solid #f0f;
+    height: 50%;
+    background: url('../images//紫罗兰永恒花园2.jpg');
+    background-size: 100%;
+    // border: 1px solid #f0f;
+  }
+  img {
+    width: 100%;
   }
 }
