--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,10 +4,14 @@
   padding: 0;
   margin: 0;
 }
-body {
-  background: rgba(0, 0, 255, .2);
+html, body {
   height: 100%;
-  transform: rotate(1deg);
+  background: #000;
+  width: 80%;
+  margin: 0 auto;
+}
+body {
+  transform: rotate(2deg);
   backface-visibility: hidden;
 }
 
